--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <h1>Welcome to my homepage!</h1>
         <p>I am currently an Associate  Professor at the Department of Mathematics and Statistics at Oakland University. Currently, I serve as the Academic Co-President of the <a href="https://sites.google.com/view/glsiam" target="_blank">Great Lakes Section of SIAM</a>. <!--Previously I was working with <a href="https://uwaterloo.ca/scholar/srheberg" target="_blank">Prof. Sander Rhebergen</a> on space-time hybridizable finite element methods (2016-2018) and at the <a href="http://www.vki.ac.be/" target="_blank">Von Karman Institute</a> in Belgium with Prof. Herman Daconinck on adjoint based methods for aeronautic application (2014-2016). I obtained my PhD from the <a href="http://www.math.elte.hu/" target="_blank">Institute of Mathematics</a> at the Eotvos Lorand University in Hungary.--></p>
 
-        <p>We are hosting the <a href="https://sites.google.com/oakland.edu/fec2025-spring-at-ou/" target="_blank">2025 Spring Finite Element Circus</a> at OU!</p>
+        <p>We hosted the <a href="https://sites.google.com/oakland.edu/fec2025-spring-at-ou/" target="_blank">2025 Spring Finite Element Circus</a> at OU.</p>
         
         <p>Office: Oakland University<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Department of Mathematics and Statistics<br>
