--- a/publications.html
+++ b/publications.html
@@ -55,11 +55,14 @@
 <span style="font-weight: bold; font-size:20px;">Journal papers</span>
 <br>
 <br>
-[11] J-U. Chen, T.L. Horvath and T. Bui-Thanh, A Divergence-Free and H(div)-Conforming Embedded-Hybridized DG Method for the Incompressible Resistive MHD equations, submitted, (2023) [<a href="https://www.sciencedirect.com/science/article/abs/pii/S0045782524006704" target="_blank">article</a>] [<a href="https://arxiv.org/abs/2310.06687" target="_blank" >preprint</a>]<br>
+[12] G. Saylor, T.L. Horvath and N. Sharma, An unconditionally stable hybridizable-embedded discontinuous Galerkin method for the phase field crystal equation, (2025), submitted
+<br>
+<br>
+[11] J-U. Chen, T.L. Horvath and T. Bui-Thanh, A Divergence-Free and H(div)-Conforming Embedded-Hybridized DG Method for the Incompressible Resistive MHD equations, Comput. Meth. in Appl. Mech. Eng. 432 (2024) [<a href="https://www.sciencedirect.com/science/article/abs/pii/S0045782524006704" target="_blank">article</a>] [<a href="https://arxiv.org/abs/2310.06687" target="_blank" >preprint</a>]<br>
 <br>
 [10] K.L.A. Kirk, T.L. Horvath and S. Rhebergen, Analysis of an exactly mass conserving space-time hybridized discontinuous Galerkin method for the time-dependent Navier--Stokes equations, Mathematics of Computation, 92/340 (2023), pp 525-556 [<a href="https://doi.org/10.1090/mcom/3796" target="_blank">article</a>] [<a href="https://arxiv.org/abs/2103.13492" target="_blank" >preprint</a>]<br>
 <br>
-[9] T.L. Horvath and S. Rhebergen, A conforming sliding mesh technique for an embedded-hybridized discontinuous Galerkin discretization for fluid-rigid body interaction (2022), Int. J. Numer. Meth. Fluids, 94/11 (2022), pp. 1784-1809 [<a href="https://doi.org/10.1002/fld.5127" target="_blank" >article</a>] [<a href="https://arxiv.org/abs/2105.12542" target="_blank" >preprint</a>]<br>
+[9] T.L. Horvath and S. Rhebergen, A conforming sliding mesh technique for an embedded-hybridized discontinuous Galerkin discretization for fluid-rigid body interaction, Int. J. Numer. Meth. Fluids, 94/11 (2022), pp. 1784-1809 [<a href="https://doi.org/10.1002/fld.5127" target="_blank" >article</a>] [<a href="https://arxiv.org/abs/2105.12542" target="_blank" >preprint</a>]<br>
 <br>
 [8] T.L. Horvath and S. Rhebergen, An exactly mass conserving space-time embedded-hybridized discontinuous Galerkin method for the Navier-Stokes equations on moving domains, J. Comp. Phys. 417 (2020) [<a href="https://doi.org/10.1016/j.jcp.2020.109577" target="_blank" >article</a>] [<a href="http://arxiv.org/abs/1910.08616" target="_blank" >preprint</a>]<br>
 <br>
