--- a/talks.html
+++ b/talks.html
@@ -54,10 +54,13 @@
 <span style="font-weight: bold; font-size:20px;">Upcoming talks and conference participations</span>
 <br>
 <br>
-FE Circus, Spring 2025, April 25-26, 2025, Oakland University
+Midwest NA Day, University of Notre Dame, 2026
 <br>
 <br>
-European Finite Element Fair EFEF 2025, May 23-24, 2025, Trieste, Italy
+Computational Methods in Applied Mathematics (CMAM 2026), July 20 – 24, 2026 at TU Wien, Vienna, Austria
+<br>
+<br>
+<span style="font-weight: bold; font-size:20px;">Recent talks</span>
 <br>
 <br>
 Embedded-Hybridized Discontinuous Galerkin for Magnetohydrodynamics, COUPLED Conference 2025, May 25-28, 2025, Villasimius, Italy
@@ -66,52 +69,20 @@ Embedded-Hybridized Discontinuous Galerkin for Magnetohydrodynamics, COUPLED Con
 Embedded-Hybridized Discontinuous Galerkin for Magnetohydrodynamics, ICOSAHOM 2025, July 13-18, 2025, Montreal, Canada
 <br>
 <br>
-<span style="font-weight: bold; font-size:20px;">Recent talks</span>
+Unconditionally Energy Stable Discretization for the Phase-Field Crystal Equation, European Finite Element Fair EFEF 2025, May 23-24, 2025, Trieste, Italy
+<br>
+<br>
+Unconditionally Energy Stable Discretization for the Phase-Field Crystal Equation, European Finite Element Fair EFEF 2025, May 23-24, 2025, Trieste, Italy
+<br>
+<br>
+Hybrid and Embedded DG methods for higher order and coupled problems, Eötvös Loránd University, Department of Applied Analysis and Computational Mathematics colloquium talk (invited), May 12, 2025, Budapest, Hungary
+<br>
+<br>
+Embedded-Hybridized Discontinuous Galerkin for Magnetohydrodynamics, FE Circus, Spring 2025, April 25-26, 2025, Oakland University
 <br>
 <br>
 Adaptive Space-Time Mesh Generation, FE Circus, Spring 2024, April 19-20, 2024, Brown University
-<br>
-<br>
-Adaptive Space-Time Mesh Generation, FE Circus, FE Rodeo 2024, March 8-9, 2024, Rice University
-<br>
-<br>
-Implementation of Hybridizable Discontinuous Galerkin Methods via the HDG Branch, <a href="https://mfem.org/workshop/" target="_blank">3rd MFEM Community Workshop, Virtual Meeting</a>, October 26, 2023
-<br>
-<br>
-A Space-Time Embedded-Hybridized Discontinuous Galerkin Method for Incompressible Flows, 17th USNCCM, July 23-27, 2023, Albuquerque, New Mexico 
-<br>
-<br>
-Space-time embedded/hybridized DG for the Navier-Stokes problem, 2023 ICOSAHOM, August 14-18, 2023, Seoul, South Korea
-<br>
-<br>
-Space-Time DG with Non-Matching Spatial Meshes, 22nd IACM Computational Fluids Conference - CFC 2023, Aril 25 - 28, 2023 Cannes, France
-<br>
-<br>
-Embedded DG or Hybridizable DG? Why not both?, 2023 Spring AMS Central Sectional Meeting, April 15-16, 2023
-<br>
-<br>
-Space-time embedded/hybridized DG for the Navier-Stokes problem, SIAM CSE, February 26 - March 3, 2023, Amsterdam, The Netherlands
-<br>
-<br>
-Space-Time Embedded-Hybridized Discontinuous Galerkin Method for Fluid-Rigid Body Interaction Problems, WCCM 2022, (virtual)
-<br>
-<br>
-Space-Time Hybridizable Discontinuous Galerkin with MFEM, <a href="https://mfem.org/seminar/" target="_blank">FEM@LLNL Seminar Series</a>, March 29, 2022, <a href="https://mfem.org/pdf/seminar/horvath.pdf" target="_blank">slides</a> <a href="https://www.youtube.com/watch?v=v8-EubYMT-A" target="_blank">YouTube video</a>
-<br>
-<br>
-Sliding grid techniques with Precomputable Meshes for Space-Time Hybridizable Discontinuous Galerkin methods, 2022 Finite Element Rodeo, March 4-5, 2022 Southern Methodist University, Dallas, Texas
-<br>
-<br>
-Space-Time (Embedded-)Hybridized Discontinuous Galerkin Method for incompressible flow problems, colloquium talk, Oakland University, November 9, 2021.
-<br>
-<br>
-Mathematical and numerical modeling with differential equation, Hillsdale College, September 23, 2021.
-<br>
-<br>
-Space-Time discontinuous Galerkin methods for fluid-rigid body interaction problems, 16th USNCCM 2021, Virtual, July 25-29, 2021.
-<br>
-<br>
-Sliding Grid Techniques for Space-time Embedded-Hybridized Discontinuous Galerkin Method, ICOSAHOM 2020/2021, Virtual, July 12-16, 2021.
+
 <br>
 
       </div>
