--- a/teaching.html
+++ b/teaching.html
@@ -55,15 +55,15 @@
 <br>-->
 
 <br>
-<span style="font-weight: bold; font-size:20px;">Current term (2025 Winter)</span>
+<span style="font-weight: bold; font-size:20px;">Current term (2025 Fall)</span>
 <br>
 <br>
-APM 6443: Numerical Methods for Partial Differential Equations<br>
+On sabbatical<br>
 <br>
 <span style="font-weight: bold; font-size:20px;">Recent terms </span>
 <br>
 <br>
-MTH 1555: Calculus II (2024 Summer)<br>
+MTH 1555: Calculus II (2024 Summer, 2025 Summer)<br>
 <br>
 APM 2559: Introduction to Differential Equations (2023 Fall, 2024 Fall)<br>
 <br>
@@ -75,7 +75,7 @@ APM 5557: Advanced Partial Differential Equations (2024 Fall)<br>
 <br>
 APM 2555: Introduction to Differential Equations with Matrix Algebra (2024 Winter)<br>
 <br>
-APM 6443: Numerical Methods for Partial Differential Equations (2022 Winter, 2023 Winter)<br>
+APM 6443: Numerical Methods for Partial Differential Equations (2022 Winter, 2023 Winter, 2025 Winter)<br>
 <br>
       </div>
     </div>
